# Message-Broker-Ports-Adapters-I

./: .flaskenv  CRITERIA.md  INSTRUMENTED.md  MANUAL_PULL.md  README.md  pruebas.py  pyproject.toml
src/app/: settings.py
src/app/application/: exceptions.py
src/app/application/command_handlers/: assign_driver.py  create_driver.py  create_package.py  create_sender.py  deliver_package.py  free_driver.py  verify_sender.py
src/app/application/commands/: assign_driver.py  create_driver.py  create_package.py  create_sender.py  deliver_package.py  free_driver.py  verify_sender.py
src/app/application/dtos/: driver.py  package.py  sender.py
src/app/application/query_handlers/: get_driver.py  get_package.py  get_sender.py  list_drivers.py  list_packages.py  list_senders.py
src/app/domain/: exceptions.py
src/app/domain/entities/: driver.py  package.py  sender.py
src/app/domain/services/: assign_driver.py
src/app/domain/value_objects/: delivery_date.py  (+4 more)
src/app/infrastructure/: bootstrap.py
tests/: conftest.py
tests/application/queries/: test_get_driver_by_id.py  test_get_package_by_id.py  test_get_sender_by_id.py  test_list_drivers.py  test_list_packages.py  test_list_pending_packages.py  test_list_senders.py
tests/application/query_handlers/: test_get_driver_handler.py  test_list_drivers_handler.py
tests/domain/entities/: test_driver.py  test_package.py  test_sender.py
tests/domain/value_objects/: test_delivery_date.py  test_driver_status.py  test_id.py  test_package_status.py  test_sender_status.py
tests/infrastructure/http/: test_query_processor.py
(+33 files in other folders)
